rocketchat/rocketchat-rocketchat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
  namespace: rocketchat
  labels:
    k8s-app: rocketchat
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: rocketchat
  template:
    metadata:
      labels:
        k8s-app: rocketchat
    spec:
      containers:
      - name: rocketchat
        image: rocketchat/rocket.chat:0.64.0
