rocketchat/rocketchat-rocketchat-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: rocketchat
  name: rocketchat
  namespace: rocketchat
spec:
  ports:
  - name: rocketchat
    port: 3000
    targetPort: 3000
  selector:
    k8s-app: rocketchat
